--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "expressjs": "^1.0.1",
+    "express": "^4.16.3",
     "sequelize": "^4.37.10"
   }
 }
