--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-joi-validator": "^2.0.0",
+    "joi": "^13.4.0",
+    "multer": "^1.3.1",
     "pg": "^7.4.3",
     "sequelize": "^4.37.10",
     "sequelize-cli": "^4.0.0"
