--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pg": "^7.4.3",
     "sequelize": "^4.37.10",
     "sequelize-cli": "^4.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.4.0"
   }
 }
